# inman-be

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  apply_changes.sql  openapi.yaml  render.yaml
.sqlx/: query-29a8924e1ae2277db2948c4a2e5d0b6412a1d2f894c9d296ef1fd22e58e0485a.json  query-bbe84c897b12342a30fd9d6eba7164d0d979a4885454ee54be139858c791400c.json  query-d8fc89b53ddbdbc6c1624133900c6da97f93bfd9f5b4520781a9014db1cf1afd.json  query-ecc7ae4be91be4ce913c5e270d5bf00258938a5c4243a284bacb0febc36b43a8.json  query-f6f0c652631e55d455b5288da04a3b9e66b2306d5b0e80adfcad2e087a8c3cbd.json  query-fa17d9093c9e6274a458aecec0823d2c92ae7d28e1a3e03eaabc908c12ef0bee.json
migrations/: 20230424000000_consolidated.sql  20230424_init.sql  20250501_add_donors_procurements.sql  20250517000000_add_value_field_to_items.sql
src/: main.rs
src/middleware/: admin_guard.rs  jwt_extractor.rs  jwt_middleware.rs  mod.rs  permission_guard.rs
src/routes/: auth.rs  borrowings.rs  items.rs  lookup.rs  me.rs  mod.rs  permissions.rs  upload.rs  user.rs
src/services/: drive_storage.rs  mod.rs
