[package]
name = "rustrest"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.7"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenv = "0.15"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
