[package]
name = "rustrest"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.7"
env_logger = "0.11"
futures = "0.3"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenv = "0.15"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
qrcode = "0.14.1"
image = { version = "0.25.6", features = ["png"] }
actix-multipart = "0.6"
sanitize-filename = "0.5"
mime = "0.3"
tokio-stream = "0.1"
actix-files = "0.6"
google-drive3 = "5.0.3"
yup-oauth2 = "8.3.0"
base64 = "0.21.5"
reqwest = { version = "0.11", features = ["json", "multipart"] }
hyper = "0.14"
hyper-rustls = { version = "0.24", features = ["native-tokio", "http1"] }